--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,30 @@ h6 {
 p {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  line-height: 1.5;
   color: #999;
+  margin: 0;
+  line-height: 1.5;
+}
+
+input, button, label {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+}
+
+
+.button {
+  text-transform: uppercase;
+  background: #333;
+  border: 0;
+  padding: 1em;
+  outline: 0;
+  color: #fff;
+  border: 1px solid #333;
+}
+
+.button:hover {
+  transition: all .2s ease-out;
+  background: #fff;
+  color: #333;
+  cursor: pointer;
 }
